<resources>
    <string name="app_name">UI_Assessment</string>
    <string name="food_bank">Food Bank</string>
    <string name="launch_logo">Launch Logo</string>
    <string name="special_amp_delicious_food"><![CDATA[Special & Delicious Food]]></string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="discount_banner">50% Discount Banner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment1_food_banner">Fragment1 food banner</string>
    <string name="different_kind_of_food">Different Kind Of Food</string>
    <string name="type_a">Type A</string>
    <string name="food_items">Food Items</string>
    <string name="food_name">Food Name</string>
    <string name="_0_00">$ 0.00</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="add_cart">Add Cart</string>
    <string name="back_button_from_fragment2">Back Button from Fragment2</string>
    <string name="search_from_here">Search From Here</string>
    <string name="item_image">Item Image</string>
    <string name="food_delights_the_senses_and_nourishes_the_body_it_s_a_blend_of_flavors_culture_and_creativity_every_dish_tells_a_story_worth_savoring">Food delights the senses and nourishes the body. It\'s a blend of flavors, culture, and creativity. Every dish tells a story worth savoring.</string>
    <string name="forward_arrow">Forward Arrow</string>
</resources>