<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#08021A"
        android:padding="20dp"
        tools:context=".views.MainActivity">

        <androidx.cardview.widget.CardView
            android:id="@+id/launch_logo_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:cardCornerRadius="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/launch_logo_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/launch_logo"
                android:scaleType="centerCrop"
                android:src="@drawable/launch_logo" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/launch_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/food_bank"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/launch_logo_card" />

        <TextView
            android:id="@+id/launch_sub_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/special_amp_delicious_food"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/launch_txt" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/launch_login_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_red"
            android:text="@string/log_in"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textSize="20sp"
            android:onClick="authenticate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/launch_discount_banner_card"
            app:layout_constraintTop_toBottomOf="@id/launch_sub_txt"
            app:layout_constraintVertical_bias="0.3"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/launch_signup_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@drawable/round_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/launch_discount_banner_card"
            app:layout_constraintTop_toBottomOf="@id/launch_login_btn"
            app:layout_constraintVertical_bias="0.15"
            android:onClick="authenticate"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/launch_discount_banner_card"
            android:layout_width="320dp"
            android:layout_height="180dp"
            app:cardBackgroundColor="#08021A"
            app:cardCornerRadius="35dp"
            android:layout_margin="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:contentDescription="@string/discount_banner"
                android:src="@drawable/launch_discount_banner" />
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>