<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="120dp"
        android:layout_height="200dp"
        android:background="#08021A"
        android:padding="10dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardBackgroundColor="#08021A"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:id="@id/frag1_horizontal_recycler_img_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:cardCornerRadius="10dp">

                    <ImageView
                        android:id="@+id/frag1_horizontal_recycler_img"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:contentDescription="@string/food_items"
                        android:src="@drawable/ic_launcher_background"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/frag1_horizontal_recycler_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/food_name"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:paddingTop="5dp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/frag1_horizontal_recycler_img_card"
                    app:layout_constraintTop_toBottomOf="@+id/frag1_horizontal_recycler_img_card" />

                <TextView
                    android:id="@+id/frag1_horizontal_recycler_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_0_00"
                    android:textColor="@color/white"
                    android:paddingTop="5dp"
                    app:layout_constraintStart_toStartOf="@id/frag1_horizontal_recycler_img_card"
                    app:layout_constraintTop_toBottomOf="@+id/frag1_horizontal_recycler_name" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/frag1_horizontal_recycler_btn"
                    android:layout_width="70dp"
                    android:layout_height="25dp"
                    android:background="@drawable/round_red"
                    android:text="@string/add_cart"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:layout_marginTop="5dp"
                    app:layout_constraintStart_toStartOf="@id/frag1_horizontal_recycler_img_card"
                    app:layout_constraintTop_toBottomOf="@+id/frag1_horizontal_recycler_price" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>