<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#08021A">

        <androidx.cardview.widget.CardView
            android:id="@+id/frag2_recycler_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#08021A"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/frag2_recycler_card_content"
                android:layout_width="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/frag2_recycler_img_card_constraint"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.32">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/frag2_recycler_img_card"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        app:cardCornerRadius="10dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:cardBackgroundColor="#08021A">

                        <ImageView
                            android:id="@+id/frag2_recycler_img"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:scaleType="centerCrop"
                            android:contentDescription="@string/item_image"
                            android:src="@drawable/ic_launcher_background" />
                    </androidx.cardview.widget.CardView>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/frag2_recycler_content"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    app:layout_constraintWidth_percent="0.68"
                    android:padding="5dp"
                    app:layout_constraintStart_toEndOf="@id/frag2_recycler_img_card_constraint">

                    <TextView
                        android:id="@+id/frag2_recycler_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/food_name"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:paddingTop="5dp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/frag2_recycler_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#63656A"
                        android:layout_marginTop="5dp"
                        android:text="@string/food_delights_the_senses_and_nourishes_the_body_it_s_a_blend_of_flavors_culture_and_creativity_every_dish_tells_a_story_worth_savoring"
                        app:layout_constraintTop_toBottomOf="@id/frag2_recycler_name" />

                    <TextView
                        android:id="@+id/frag2_recycler_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_0_00"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:paddingTop="5dp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/frag2_recycler_description" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/frag2_recycler_btn"
                        android:layout_width="70dp"
                        android:layout_height="25dp"
                        android:background="@drawable/round_red"
                        android:text="@string/add_cart"
                        android:textColor="@color/white"
                        android:textAllCaps="false"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/frag2_recycler_price" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>