<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.CategoryFrag"
        android:background="#08021A">

            <androidx.cardview.widget.CardView
                android:id="@+id/frag1_banner_card"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/frag2_banner_card_view">

                <ImageView
                    android:id="@+id/frag1_banner_img"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/fragment1_food_banner"
                    android:src="@drawable/frag1_banner"
                    app:tint="@color/shade"
                    app:tintMode="src_over" />

                <TextView
                    android:id="@+id/frag1_banner_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAllCaps="false"
                    android:text="@string/different_kind_of_food"
                    android:elevation="2dp"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_gravity="center_horizontal"
                    android:gravity="bottom"
                    android:layout_marginBottom="30dp" />

                <ImageView
                    android:id="@+id/frag1_forward_arrow"
                    android:layout_width="35dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/forward_arrow"
                    android:elevation="2dp"
                    android:src="@drawable/forward_arrow" />
            </androidx.cardview.widget.CardView>






<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toBottomOf="@id/frag1_banner_card">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/frag1_vertical_recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:padding="5dp"
            android:clipToPadding="false"
             />
</androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>